--- a/PACboard/Release/makefile
+++ b/PACboard/Release/makefile
@@ -32,6 +32,11 @@ endif
 
 -include ../makefile.defs
 
+BUILD_ARTIFACT_NAME := PACboard
+BUILD_ARTIFACT_EXTENSION := elf
+BUILD_ARTIFACT_PREFIX := 
+BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME).$(BUILD_ARTIFACT_EXTENSION)
+
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
 PACboard.elf \
@@ -47,11 +52,14 @@ PACboard.bin \
 
 
 # All Target
-all: PACboard.elf secondary-outputs
+all: main-build
+
+# Main-build Target
+main-build: PACboard.elf secondary-outputs
 
 # Tool invocations
-PACboard.elf: $(OBJS) $(USER_OBJS) C:\Users\carte\Documents\GitHub\QSS\Firmware\PACboard\STM32F413ZHTX_FLASH.ld
-	arm-none-eabi-gcc -o "PACboard.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\carte\Documents\GitHub\QSS\Firmware\PACboard\STM32F413ZHTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="PACboard.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+PACboard.elf: $(OBJS) $(USER_OBJS) C:\Quadcopter\ System\ Solutions\Firmware\PACboard\STM32F413ZHTX_FLASH.ld
+	arm-none-eabi-gcc -o "PACboard.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Quadcopter System Solutions\Firmware\PACboard\STM32F413ZHTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="PACboard.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -77,7 +85,14 @@ clean:
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
 
-.PHONY: all clean dependents
+fail-specified-linker-script-missing:
+	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
+	@exit 2
+
+warn-no-linker-script-specified:
+	@echo 'Warning: No linker script specified. Check the linker settings in the build configuration.'
+
+.PHONY: all clean dependents fail-specified-linker-script-missing warn-no-linker-script-specified
 .SECONDARY:
 
 -include ../makefile.targets
